# paio

decode-batch/src/: main.rs
message/: Cargo.toml  build.rs
message/src/: lib.rs  proto_message.rs
message/src/proto/: message.proto
tripa/: Cargo.toml
tripa/src/: main.rs
